# urban-occlusion-aware-segmentation

./: .gitignore  FINAL_QUALITY_PASS.md  FIXES_APPLIED.md  IMPROVEMENTS.md  PROJECT_SUMMARY.md  QUALITY_REPORT.md  QUICKSTART.md  README.md  VALIDATION_CHECKLIST.md  VALIDATION_REPORT.md  check_imports.py  pyproject.toml  requirements.txt  test_basic_imports.py  test_imports.py  verify_code_quality.py  verify_structure.py
checkpoints/: config.yaml
configs/: ablation.yaml  default.yaml  test.yaml
notebooks/: exploration.ipynb
results/: evaluation.json  results.json
scripts/: evaluate.py  predict.py  train.py
src/urban_occlusion_aware_segmentation/: __init__.py
src/urban_occlusion_aware_segmentation/data/: __init__.py  loader.py  preprocessing.py
src/urban_occlusion_aware_segmentation/evaluation/: __init__.py  metrics.py
src/urban_occlusion_aware_segmentation/models/: __init__.py  components.py  model.py
src/urban_occlusion_aware_segmentation/training/: __init__.py  trainer.py
src/urban_occlusion_aware_segmentation/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
